--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p>This is also a paragraph.</p>
     <p>This is another paragraph.</p>
     <p>This is fourth paragraph.</p>
+    <p>A branch is added</p>
   </body>
 </html>
